[package]
name = "htop"
version = "0.3.0"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "HTML to PDF converter"
documentation = "https://docs.rs/htop"
repository = "https://github.com/EngosSoftware/htop.git"
keywords = ["html", "pdf", "headless", "chrome", "converter"]
categories = ["command-line-utilities", "encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["cargo"] }
env_logger = "0.11.8"
# To avoid breaking changes, we have fixed the version.
headless_chrome = "=1.0.17"
log = "0.4.27"
