[package]
name = "htop"
version = "0.3.0"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "HTML to PDF converter"
documentation = "https://docs.rs/htop"
repository = "https://github.com/EngosSoftware/htop.git"
keywords = ["html", "pdf", "headless", "chrome", "converter"]
categories = ["command-line-utilities", "encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["cargo"] }
env_logger = "0.11.6"

headless_chrome = "=1.0.17" # This version is fixed to prevent breaking changes.
log = "0.4.25"

[dev-dependencies]
assert_cmd = "2.0.17"
biff = "0.2.0"
