[package]
name = "htop"
version = "0.3.1"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "HTML to PDF converter"
documentation = "https://docs.rs/htop"
repository = "https://github.com/EngosSoftware/htop.git"
keywords = ["html", "pdf", "headless", "chrome", "converter"]
categories = ["command-line-utilities", "encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "NOTES_AT_FUTURE_ME.md"
]

[dependencies]
clap = { version = "4.5.51", features = ["cargo"] }
env_logger = "0.11.8"

headless_chrome = "1.0.18"
log = "0.4.28"

[dev-dependencies]
assert_cmd = "2.1.1"
biff = "0.2.0"
